# wagtail-gatsby-blog-backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Vagrantfile  dev.Dockerfile  dev.docker-compose.yml  docker-compose.yml  manage.py  pyproject.toml  withgrapple.sublime-project
.github/workflows/: build-and-push-docker.yml  first-workflow.yml  login-to-host.yml  update-production-server.yml
blog/: models.py  schema.py
blog/migrations/: 0001_initial.py  0002_blogpagegalleryimage.py  0003_auto_20200612_0111.py  0004_blogtagindexpage.py  0005_auto_20200612_0208.py  0006_auto_20200618_0654.py  0007_auto_20200619_0259.py  0007_blogcategory.py  0007_blogcategory_page.py  0008_auto_20200624_0137.py  0008_blogpage_to_blogcategory_relation.py  0009_auto_20200726_0157.py  0009_blogpage_categories.py  0010_auto_20200624_0157.py  0010_auto_20200728_0540.py  0011_auto_20200624_0239.py  0011_auto_20200728_0547.py  0012_auto_20200729_0517.py  0012_blogcategoryindexpage.py  0013_auto_20200624_0437.py  0013_auto_20200729_0528.py  0014_blogcategoriesindex.py
blog/models/: __init__.py  blogcategory.py  blogindexpage.py  (+3 more)
container/: cronjob.sh  publish_scheduled_pages.sh  runapp.sh  stopapp.sh
documents_extension/: schema.py
headless/: apps.py  models.py
home/: models.py
mysite/: schema.py  signals.py  urls.py  wsgi.py
nginx/: nginx.service
script/: dist.sh
server/: backup_container_data.sh  configure_docker.sh  configure_nginx.sh  configure_ufw.sh  data_to_container.sh  install_docker.sh  install_nginx.sh  provision.sh
tagging/: models.py  schema.py
(+17 files in other folders)
