[tool.poetry]
name = "withgrapple"
version = "0.1.0"
description = "Just trying to build with Wagtail and Wagtail-Grapple for GraphQL"
authors = ["Tibor Leupold <tibor@lpld.io>"]

[tool.poetry.dependencies]
python = "^3.7"
wagtail = ">=2.5"
django = "^2.2"
isort = "^4.3.21"
django-cors-headers = "^3.4.0"
wagtail-grapple = "^0.5.1"
gunicorn = "^20.0.4"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
